# DCIST-2025-SceneGraphLab

./: .gitignore  README.md  exercises.ipynb  exercises.py  notebook.py  pyproject.toml  requirements.txt  solutions.py  worked_examples.ipynb  worked_examples.py
src/dcist_sgl/: __init__.py
