[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dcist_sgl"
version = "0.0.1"
dependencies = [
    "spark_dsg",
    "gdown",
    "ipympl",
    "jupyter",
    "jupytext",
    "matplotlib",
    "networkx",
    "seaborn",
    "torch_geometric",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
